--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ bin
 *.swp
 *.swo
 *~
+.DS_Store
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# Vscode files
+.vscode
