Fix issue and refine README
1) Fix the issue when there are more than one traitdefinitions
2) Refine README
3) lowercase workload metadata.name so it could be used as dns

--- a/config/samples/components/ContainerizedWorkload/core.oam.dev_v1alpha2_template.yaml
+++ b/config/samples/components/ContainerizedWorkload/core.oam.dev_v1alpha2_template.yaml
@@ -9,7 +9,7 @@ spec:
     apiVersion: core.oam.dev/v1alpha2
     kind: ContainerizedWorkload
     metadata:
-      name: TBD
+      name: tbd
     spec:
       containers:
         - image: myrepo/myapp:v1
