--- a/config/samples/components/ContainerizedWorkload/workloadDefinition.yaml
+++ b/config/samples/components/ContainerizedWorkload/workloadDefinition.yaml
@@ -3,7 +3,7 @@ kind: WorkloadDefinition
 metadata:
   name: containerizedworkloads.core.oam.dev
   annotations:
-    defatultTemplateRef: containerizedworkload-template
+    rudrx.oam.dev/template: containerizedworkload-template
     short: containerized
 spec:
   definitionRef:
