--- a/config/samples/traits/ManualScalerTrait/manualscaletrait_definition.yaml
+++ b/config/samples/traits/ManualScalerTrait/manualscaletrait_definition.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: manualscalertrait.core.oam.dev
   annotations:
-    defatultTemplateRef: manualscalertrait.core.oam.dev-template
+    rudrx.oam.dev/template: manualscalertrait.core.oam.dev-template
     short: ManualScaler
 spec:
   appliesToWorkloads:
