--- a/config/crd/bases/admin.oam.dev_templates.yaml
+++ b/config/crd/bases/admin.oam.dev_templates.yaml
@@ -3,6 +3,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
   name: templates.admin.oam.dev
 spec:
@@ -12,7 +14,7 @@ spec:
     listKind: TemplateList
     plural: templates
     singular: template
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: Template is the Schema for the templates API
