--- a/pkg/plugins/testdata/workloadDef.yaml
+++ b/pkg/plugins/testdata/workloadDef.yaml
@@ -6,13 +6,35 @@ spec:
   definitionRef:
     name: deployments.testapps
   extension:
-    alias: deployment
-    object:
-      apiVersion: core.oam.dev/v1alpha2
-      kind: Deployment
-    parameters:
-      - name: image
-        short: i
-        required: true
-        fieldPaths:
-          - "spec.containers[0].image"
+    template: |
+      #Template: {
+      	apiVersion: "apps/v1"
+      	kind:       "Deployment"
+      	metadata: name: deployment.name
+      	spec: {
+      		containers: [{
+      			image: deployment.image
+      			name:  deployment.name
+      			env:   deployment.env
+      			ports: [{
+      				containerPort: deployment.port
+      				protocol:      "TCP"
+      				name:          "default"
+      			}]
+      		}]
+      	}
+      }
+
+      deployment: {
+      	name: string
+      	// +usage=specify app image
+      	// +short=i
+      	image: string
+      	// +usage=specify port for container
+      	// +short=p
+      	port: *8080 | int
+      	env: [...{
+      		name:  string
+      		value: string
+      	}]
+      }
