--- a/config/samples/workloads/containerizedworkload_definition.yaml
+++ b/config/samples/workloads/containerizedworkload_definition.yaml
@@ -2,6 +2,9 @@ apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
   name: containerizedworkloads.core.oam.dev
+  annotation:
+    "oam.appengine.info/apiVersion": "core.oam.dev/v1alpha2"
+    "oam.appengine.info/kind": "ContainerizedWorkload"
 spec:
   definitionRef:
     name: containerizedworkloads.core.oam.dev
