--- a/config/samples/workloads/deployment_definition.yaml
+++ b/config/samples/workloads/deployment_definition.yaml
@@ -2,9 +2,9 @@ apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
   name: deployments.apps
-  annotation:
-    "oam.appengine.info/apiVersion": "apps/v1"
-    "oam.appengine.info/kind": "Deployment"
+  annotations:
+    oam.appengine.info/apiVersion: "apps/v1"
+    oam.appengine.info/kind: "Deployment"
 spec:
   definitionRef:
     name: deployments.apps
