--- a/pkg/plugins/testdata/traitDef.yaml
+++ b/pkg/plugins/testdata/traitDef.yaml
@@ -1,10 +1,12 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: routes.extend.oam.dev
+  name: routes.test
+  labels:
+    usecase: forplugintest
 spec:
   definitionRef:
-    name: routes.extend.oam.dev
+    name: routes.test
   extension:
     template: |
       #Template: {
