--- a/config/samples/traits/manualscaletraits_definition.yaml
+++ b/config/samples/traits/manualscaletraits_definition.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: manualscalertrait.core.oam.dev
+  name: manualscalertraits.core.oam.dev
   annotations:
     oam.appengine.info/apiVersion: "core.oam.dev/v1alpha2"
     oam.appengine.info/kind: "ManualScalerTrait"
