--- a/config/samples/traits/route.yaml
+++ b/config/samples/traits/route.yaml
@@ -15,9 +15,10 @@ spec:
   extension:
     install:
       helm:
-        - repo: stable
-          name: nginx-ingress
-          version: 1.41.2
+        repo: stable
+        name: nginx-ingress
+        url: https://kubernetes-charts.storage.googleapis.com/
+        version: 1.41.2
     template: |
       #Template: {
       	apiVersion: "networking.k8s.io/v1beta1"
