Implement API `api/envs/default/apps/
implement API `api/envs/default/apps/ and refactor code

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ vendor/
 
 pkg/test/vela
 tmp/
+
+# Dashboard
+dashboard/node_modules/
+dashboard/package-lock.json
+dashboard/src/.umi/
+package-lock.json
