fix appfile update

--- a/config/samples/traits/manualscaletraits_definition.yaml
+++ b/config/samples/traits/manualscaletraits_definition.yaml
@@ -16,10 +16,10 @@ spec:
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
-      		replicaCount: manualscaler.replica
+      		replicaCount: scale.replica
       	}
       }
-      manualscaler: {
+      scale: {
       	//+short=r
       	replica: *2 | int
       }
