Implement env APIs
implemented APIs for env and make api-test
and e2e-setup

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           make e2e-setup
           make e2e-test
+          make e2e-api-test
           make e2e-cleanup
 
       - name: Run Make
