--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rudrx-dashboard",
-  "version": "0.0.1",
+  "name": "micro-app-engine",
+  "version": "4.2.0",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
@@ -50,6 +50,7 @@
     "@ant-design/pro-table": "^2.4.0",
     "antd": "^4.4.0",
     "classnames": "^2.2.6",
+    "dva": "^2.4.1",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
     "omit.js": "^2.0.2",
