--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -33,3 +32,9 @@ vendor/
 
 pkg/test/vela
 tmp/
+
+# Dashboard
+dashboard/node_modules/
+dashboard/package-lock.json
+dashboard/src/.umi/
+package-lock.json
