Add trait part and capability part interface

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,7 +20,7 @@
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
     "precommit": "lint-staged",
     "prettier": "prettier -c --write \"**/*\"",
-    "start": "umi dev",
+    "start": "cross-env UMI_UI=none umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "start:no-ui": "cross-env UMI_UI=none umi dev",
@@ -48,6 +48,7 @@
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-layout": "^6.2.5",
     "@ant-design/pro-table": "^2.4.0",
+    "@antv/g6": "^3.6.2",
     "antd": "^4.4.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
