--- a/config/samples/traits/route.yaml
+++ b/config/samples/traits/route.yaml
@@ -3,8 +3,8 @@ kind: TraitDefinition
 metadata:
   name: ingresses.networking.k8s.io
   annotations:
-    "oam.appengine.info/apiVersion": "networking.k8s.io/v1beta1"
-    "oam.appengine.info/kind": "Ingress"
+    "definition.oam.dev/apiVersion": "networking.k8s.io/v1beta1"
+    "definition.oam.dev/kind": "Ingress"
 spec:
   revisionEnabled: true
   appliesToWorkloads:
