--- a/config/samples/traits/simplerollouttrait_definition.yaml
+++ b/config/samples/traits/simplerollouttrait_definition.yaml
@@ -3,8 +3,8 @@ kind: TraitDefinition
 metadata:
   name: simplerollouttraits.extend.oam.dev
   annotations:
-    "oam.appengine.info/apiVersion": "extend.oam.dev/v1alpha2"
-    "oam.appengine.info/kind": "SimpleRolloutTrait"
+    "definition.oam.dev/apiVersion": "extend.oam.dev/v1alpha2"
+    "definition.oam.dev/kind": "SimpleRolloutTrait"
 spec:
   revisionEnabled: true
   appliesToWorkloads:
