add manual test for containerized and metricsTrait

--- a/documentation/samples/metrics-demo/appConfig.yaml
+++ b/documentation/samples/metrics-demo/appConfig.yaml
@@ -16,6 +16,13 @@ spec:
                 path: "/metrics"
                 scheme:  "http"
                 enabled: true
+        - trait:
+            apiVersion: core.oam.dev/v1alpha2
+            kind: ManualScalerTrait
+            metadata:
+              name:  example-appconfig-trait
+            spec:
+              replicaCount: 3
     - componentName: metrics-application
       traits:
         - trait:
