--- a/charts/vela-core/Chart.yaml
+++ b/charts/vela-core/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: vela
+name: vela-core
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
