--- a/charts/vela-core/templates/webservices.yaml
+++ b/charts/vela-core/templates/webservices.yaml
@@ -1,13 +1,13 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
-  name: backend-service
+  name: web-service
   annotations:
     definition.oam.dev/apiVersion: "core.oam.dev/v1alpha2"
     definition.oam.dev/kind: "ContainerizedWorkload"
 spec:
   definitionRef:
-    name: containerizedworkloads.core.oam.dev
+    name: containerizeds.standard.oam.dev
   childResourceKinds:
     - apiVersion: apps/v1
       kind: Deployment
@@ -18,7 +18,8 @@ spec:
       #Template: {
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ContainerizedWorkload"
-      	metadata: name: containerized.name
+      	metadata:
+          name: containerized.name
       	spec: {
       		containers: [{
               image: containerized.image
