--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -21,5 +21,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run build --if-present
+    - run: npm run build
 
