--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -20,5 +20,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm install
     - run: npm run build --if-present
 
