add dashboard ci (#256)
* Update 更新配置

* Add dashboard ci

* Fix ci

* Fix ci

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ tmp/
 
 # Dashboard
 dashboard/node_modules/
+.eslintcache
+dashboard/dist/
 dashboard/package-lock.json
 dashboard/src/.umi/
 package-lock.json
