cross build and upload assert

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     types: [published]
     branches:
       - master
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
@@ -28,45 +32,30 @@ jobs:
         working-directory: ./dashboard
       - name: Run Make Realse
         run: make release
-
-  publish:
-    needs: [build]
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2.3.2
-      - name: Publish
-        env:
-          BintrayUser: ${{ secrets.bintrayUsername }}
-          BintrayApiKey: ${{ secrets.bintrayApiKey }}
-          VcsTag: ${{ github.event.release.tag_name }}
-        run: ./gradlew bintrayUpload
-      #- name: Publish (GitHub Packages)
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #  run: ./gradlew publish
-      - name: Zip files
-        working-directory: ./build/libs
-        run: zip JavaBotBlockAPI-${{ github.event.release.tag_name }}.zip *.jar
-      - name: Upload to release
-        uses: AButler/upload-release-assets@v2.0
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         with:
-          files: 'build/libs/JavaBotBlockAPI-${{ github.event.release.tag_name }}.zip;build/libs/*.jar'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-  sendMessage:
-    needs: [publish]
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Discord notification
-        uses: rjstone/discord-webhook-notify@v1
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+      - name: Upload Linux
+        uses: actions/upload-release-asset@v1.0.2
         with:
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-          severity: info
-          avatarUrl: 'https://docs.botblock.org/JavaBotBlockAPI/assets/img/jbba.png'
-          username: 'New release'
-          text: '${{ github.event.release.name }}'
-          description: '[**Release Information**](${{ github.event.release.html_url }})'
-          details: '${{ github.event.release.body }}'
-          footer: 'Version ${{github.event.release.tag_name}}'
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/vela-linux-amd64
+          asset_name: vela-${{ github.event.release.tag_name }}-linux-amd64
+          asset_content_type: binary/octet-stream
+      - name: Upload MacOS
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/vela-darwin-amd64
+          asset_name: vela-${{ github.event.release.tag_name }}-darwin-amd64
+          asset_content_type: binary/octet-stream
+      - name: Upload Windows
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/vela--windows-amd64
+          asset_name: vela-${{ github.event.release.tag_name }}-windows-amd64
+          asset_content_type: binary/octet-stream
