--- a/charts/vela-core/templates/backend.yaml
+++ b/charts/vela-core/templates/backend.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
-  name: webservice
+  name: backend
   annotations:
     definition.oam.dev/apiVersion: "standard.oam.dev/v1alpha1"
     definition.oam.dev/kind: "Containerized"
@@ -19,26 +19,18 @@ spec:
       	apiVersion: "standard.oam.dev/v1alpha1"
       	kind:       "Containerized"
       	metadata:
-      		name: webservice.name
+      		name: backend.name
       	spec: {
       		containers: [{
-      			image: webservice.image
-      			name:  webservice.name
-      			ports: [{
-      				containerPort: webservice.port
-      				protocol:      "TCP"
-      				name:          "default"
-      			}]
+      			image: backend.image
+      			name:  backend.name
       		}]
       	}
       }
 
-      webservice: {
+      backend: {
       	name: string
       	// +usage=specify app image
       	// +short=i
       	image: string
-      	// +usage=specify port for container
-      	// +short=p
-      	port: *6379 | int
       }
