--- a/charts/vela-core/templates/tasks.yaml
+++ b/charts/vela-core/templates/tasks.yaml
@@ -14,34 +14,34 @@ spec:
     - logging
     template: |
       #Template: {
-        apiVersion: "v1"
-        kind:       "Job"
-        metadata: name: task
-        spec: {
-          parallelism: taskSpec.count
-          completions: taskSpec.count
-          template:
-            spec:
-            containers: [{
-               image: taskSpec.image
-                 name:  taskSpec.name
-                   ports: [{
-                     containerPort: taskSpec.port
-                       protocol:      "TCP"
-                       name:          "default"
-                   }]
-                }]
-            }
-          }
-          taskSpec: {
-            // +usage=specify number of tasks to run in parallel
-            // +short=c
-            count: *1 | int
-            name: string
-            // +usage=specify app image
-            // +short=i
-            image: string
-            // +usage=specify port for container
-            // +short=p
-            port: *6379 | int
-          }
+      	apiVersion: "v1"
+      	kind:       "Job"
+      	metadata: name: task.name
+      	spec: {
+      		parallelism: task.count
+      		completions: task.count
+      		template:
+      			spec:
+      				containers: [{
+      					image: task.image
+      					name:  task.name
+      					ports: [{
+      						containerPort: task.port
+      						protocol:      "TCP"
+      						name:          "default"
+      					}]
+      				}]
+      	}
+      }
+      task: {
+      	// +usage=specify number of tasks to run in parallel
+      	// +short=c
+      	count: *1 | int
+      	name:  string
+      	// +usage=specify app image
+      	// +short=i
+      	image: string
+      	// +usage=specify port for container
+      	// +short=p
+      	port: *6379 | int
+      }
