--- a/charts/vela-core/templates/metricstraits.yaml
+++ b/charts/vela-core/templates/metricstraits.yaml
@@ -4,7 +4,7 @@ metadata:
   name: metricstraits.standard.oam.dev
   namespace: default
   annotations:
-    definition.oam.dev/apiVersion: core.oam.dev/v1alpha2
+    definition.oam.dev/apiVersion: standard.oam.dev/v1alpha1
     definition.oam.dev/kind: MetricsTrait
 spec:
   appliesToWorkloads:
