--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -74,3 +74,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - standard.oam.dev
+  resources:
+  - routes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - standard.oam.dev
+  resources:
+  - routes/status
+  verbs:
+  - get
+  - patch
+  - update
