--- a/config/samples/workloads/containerized.yaml
+++ b/config/samples/workloads/containerized.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
-  name: webservice
+  name: containerizeds.standard.oam.dev
   annotations:
     definition.oam.dev/apiVersion: "standard.oam.dev/v1alpha1"
     definition.oam.dev/kind: "Containerized"
