--- a/charts/vela-core/templates/metricstraits.yaml
+++ b/charts/vela-core/templates/metricstraits.yaml
@@ -2,6 +2,10 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   name: metricstraits.standard.oam.dev
+  namespace: default
+  annotations:
+    definition.oam.dev/apiVersion: core.oam.dev/v1alpha2
+    definition.oam.dev/kind: MetricsTrait
 spec:
   appliesToWorkloads:
     - containerizedworkloads.core.oam.dev
