--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,5 @@
 name: Publish to Registry
 on:
-  release:
-    types: [published]
   push:
     branches:
       - master
@@ -12,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Get release version
-        id: get_version
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
-      - name: Publish to Registry
+      - name: Publish to Github Docker Package Registry
+        uses: elgohr/Publish-Docker-Github-Action@2.21
+        with:
+          name: oam-dev/kubevela/vela-core
+          username: $GITHUB_ACTOR
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          tags: "latest"
+      - name: Publish to Docker Hub Registry
         uses: elgohr/Publish-Docker-Github-Action@2.21
         with:
           name: oamdev/vela-core
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: "latest,${{ env.RELEASE_VERSION }}"
+          tags: "latest"
