--- a/charts/vela-core/templates/cert-manager.yaml
+++ b/charts/vela-core/templates/cert-manager.yaml
@@ -689,7 +689,7 @@ spec:
       serviceAccountName: cert-manager-cainjector
       containers:
         - name: cert-manager
-          image: "quay.io/jetstack/cert-manager-cainjector:v0.12.0"
+          image: "oamdev/cert-manager-cainjector:v0.12.0"
           imagePullPolicy: IfNotPresent
           args:
           - --v=2
@@ -737,7 +737,7 @@ spec:
       serviceAccountName: cert-manager
       containers:
         - name: cert-manager
-          image: "quay.io/jetstack/cert-manager-controller:v0.12.0"
+          image: "oamdev/cert-manager-controller:v0.12.0"
           imagePullPolicy: IfNotPresent
           args:
           - --v=2
@@ -793,7 +793,7 @@ spec:
       serviceAccountName: cert-manager-webhook
       containers:
         - name: cert-manager
-          image: "quay.io/jetstack/cert-manager-webhook:v0.12.0"
+          image: "oamdev/cert-manager-webhook:v0.12.0"
           imagePullPolicy: IfNotPresent
           args:
           - --v=2
